--- a/Infrastructure.BaseTools/Infrastructure.BaseTools.csproj
+++ b/Infrastructure.BaseTools/Infrastructure.BaseTools.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
