--- a/Infrastructure.Messenger/Infrastructure.Messenger.csproj
+++ b/Infrastructure.Messenger/Infrastructure.Messenger.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infrastructure.BaseControllers\Infrastructure.BaseControllers.csproj" />
     <ProjectReference Include="..\Infrastructure.BaseDomain\Infrastructure.BaseDomain.csproj" />
     <ProjectReference Include="..\Infrastructure.BaseTools\Infrastructure.BaseTools.csproj" />
   </ItemGroup>
