--- a/Infrastructure.Messenger/Infrastructure.Messenger.csproj
+++ b/Infrastructure.Messenger/Infrastructure.Messenger.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\Infrastructure.BaseControllers\Infrastructure.BaseControllers.csproj" />
     <ProjectReference Include="..\Infrastructure.BaseDomain\Infrastructure.BaseDomain.csproj" />
     <ProjectReference Include="..\Infrastructure.BaseTools\Infrastructure.BaseTools.csproj" />
+    <ProjectReference Include="..\Infrastructure.BaseUserManager\Infrastructure.BaseUserManager.csproj" />
   </ItemGroup>
 
 </Project>
