--- a/Infrastructure.UserManager/appsettings.json
+++ b/Infrastructure.UserManager/appsettings.json
@@ -1,9 +1,3 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": { "SqlServer": "Server=.;Database=UserManagerDb;Trusted_Connection=True;TrustServerCertificate=True;" }
 }
