--- a/Infrastructure.BaseUserManager/Infrastructure.BaseUserManager.csproj
+++ b/Infrastructure.BaseUserManager/Infrastructure.BaseUserManager.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Infrastructure.BaseDataProvider\Infrastructure.BaseDataProvider.csproj" />
     <ProjectReference Include="..\Infrastructure.BaseDomain\Infrastructure.BaseDomain.csproj" />
     <ProjectReference Include="..\Infrastructure.BaseTools\Infrastructure.BaseTools.csproj" />
